# wgcperf

./: Cargo.toml  README.md
.github/workflows/: buildAndPack.yml
src/: adapter.rs  cli.rs  main.rs  monitor.rs  pdh.rs  perf.rs  perf_session.rs  pid.rs  window.rs
src/sinks/: dda.rs  mod.rs  wgc.rs
src/windows_utils/: composition.rs  d2d.rs  d3d.rs  dispatcher_queue.rs  dwrite.rs  dxgi.rs  event.rs  mod.rs  numerics.rs
