[package]
name = "wgcperf"
version = "0.1.0"
authors = ["robmikh <rob.mikh@outlook.com>"]
description = "A utility to record DWM GPU utilization while using WGC and DDA."
edition = "2024"

[dependencies]
windows-collections = "=0.2.0"
windows-future = "=0.2.1"
windows-numerics = "=0.2.0"
processdumper = { git = "https://github.com/robmikh/dwmdumper", rev = "cded4243a704142f2dcc2b3b00870ba785f182c5" }
#processdumper = { path = "../dwmdumper/processdumper" }
clap = { version = "4.5.39", features = [ "derive" ] }

[dependencies.windows]
version = "0.61.1"
features = [
    "Foundation_Collections",
    "Foundation_Metadata",
    "Foundation_Numerics",
    "Graphics",
    "Graphics_Capture",
    "Graphics_DirectX",
    "Graphics_DirectX_Direct3D11",
    "System",
    "UI_Composition_Core",
    "UI_Composition_Desktop",
    "Win32_Devices_Display",
    "Win32_Foundation",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Performance",
    "Win32_System_ProcessStatus",
    "Win32_System_WindowsProgramming",
    "Win32_System_WinRT",
    "Win32_System_WinRT_Composition",
    "Win32_System_WinRT_Direct3D11",
    "Win32_System_WinRT_Graphics_Capture",
    "Win32_UI_HiDpi",
    "Win32_UI_WindowsAndMessaging",
]

[features]
dxdebug = []
